--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "spark-md5": "^3.0.1"
   }
 }
